[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
anchor-common = { git = "https://github.com/stabbleorg/anchor-common.git", rev = "d44abfdac69e158759ba8a130acd929ff26378f4" }
bn = { git = "https://github.com/stabbleorg/amm-sdk.git", rev = "80ffe018f1f200f280f4ff83f4c283375777d257" }
math = { git = "https://github.com/stabbleorg/amm-sdk.git", rev = "80ffe018f1f200f280f4ff83f4c283375777d257" }
pyth-solana-receiver-sdk = "0.6.0"
