[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
anchor-common = { git = "https://github.com/stabbleorg/anchor-common.git", rev = "6efb43dd8b5910f44bb09a9e5821d85ad40a91b4" }
bn = { git = "https://github.com/stabbleorg/amm-sdk.git", rev = "80ffe018f1f200f280f4ff83f4c283375777d257" }
math = { git = "https://github.com/stabbleorg/amm-sdk.git", rev = "80ffe018f1f200f280f4ff83f4c283375777d257" }
pyth-solana-receiver-sdk = "0.6.0"
