[package]
name = "pool-smart"
version = "1.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pool_smart"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
vault = { path = "../vault", features = ["cpi"] }
pool-stable = { path = "../pool-stable", features = ["cpi"] }
pool-weighted = { path = "../pool-weighted", features = ["cpi"] }
