[package]
name = "pool-weighted"
version = "2.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pool_weighted"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
vault = { path = "../vault", features = ["cpi"] }
bn = { path = "../../libraries/bn" }
math = { path = "../../libraries/math" }
