[package]
name = "slr"
version = "1.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "slr"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
pool-stable = { path = "../pool-stable", features = ["cpi"] }
pool-weighted = { path = "../pool-weighted", features = ["cpi"] }
