[package]
name = "smart-vault"
version = "1.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
vault = { path = "../vault", features = ["cpi"] }
stable-swap = { path = "../stable-swap", features = ["cpi"] }
weighted-swap = { path = "../weighted-swap", features = ["cpi"] }
bn = { path = "../../libraries/bn" }
