[package]
name = "stable-swap"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-common = { workspace = true }
bn =  { workspace = true }
math =  { workspace = true }

vault = { path = "../vault", features = ["cpi"] }
