[package]
name = "vault"
version = "1.4.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-program = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-common = { workspace = true }
math = { workspace = true }
