[package]
name = "weighted-swap"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "weighted_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
anchor-common = { path = "../../libraries/anchor-common" }
vault = { path = "../vault", features = ["cpi"] }
bn = { path = "../../libraries/bn" }
math = { path = "../../libraries/math" }
